--- a/src/app/features/admin-layout/department-management/department-management.component.html
+++ b/src/app/features/admin-layout/department-management/department-management.component.html
@@ -1,10 +1,17 @@
 <div class="w-full h-full">
-    <div class="  rounded-3xl shadow-xl overflow-hidden relative">
-      <img src="assets/logo/vsuHeader.png" class="w-full h-full object-contain ">
+  <div class="relative w-full h-24 overflow-hidden shadow-xl rounded-3xl">
+    <!-- Background Image with Gradient Overlay -->
+    <div class="absolute inset-0 bg-[url('assets/logo/vsuHeader.png')] bg-cover bg-center"></div>
+    <div class="absolute inset-0 bg-gradient-to-r from-blue-800/50 to-blue-900/50"></div>
+
+    <!-- Optional: Text Content -->
+    <div class="relative flex items-center justify-center h-full px-6">
+      <!-- <h1 class="text-3xl font-bold text-white uppercase">Philippine Charity Sweepstakes Office</h1> -->
     </div>
-    <div class="w-full py-4 px-6 my-4 flex justify-between rounded-lg bg-white shadow-md">
+  </div>
+    <div class="flex justify-between w-full px-6 py-4 my-4 bg-white rounded-lg shadow-md">
       <div>
-        <h1 class="font-medium text-2xl  tracking-wide">Department Management</h1>
+        <h1 class="text-2xl font-medium tracking-wide">Department Management</h1>
         <p class="font-thin " >Manage department for client input. Create, edit, delete and view statuses of each department in this section.</p>
       </div>
       <div class="w-16 h-16">
@@ -12,39 +19,39 @@
       </div>
     </div>
     <!-- Flex Container -->
-    <div class="flex flex-col 2xl:flex-row gap-3 w-full h-full pb-4">
+    <div class="flex flex-col w-full h-full gap-3 pb-4 2xl:flex-row">
       <!-- Item Selection -->
       <div class="bg-white rounded-lg shadow-md flex-[4_4_0%] h-full">
-        <div class=" grid grid-cols-3 px-3 py-3 gap-3"> 
-          <button 
-   
-          *ngFor="let department of departments; let i = index" 
+        <div class="grid grid-cols-3 gap-3 px-3 py-3 ">
+          <button
+
+          *ngFor="let department of departments; let i = index"
           class="group transition-all hover:scale-110   bg-white border-[var(--primary)] hover:bg-[var(--primary-dark)] hover:text-white hover:border-[var(--primary-light)]  h-48 p-4 rounded-lg flex flex-col gap-2 shadow-md border-2 border-dashed">
 
           <!-- Header -->
-          <div class="flex gap-4 items-center">
+          <div class="flex items-center gap-4">
             <!-- Lottie Container -->
             <div class="transition-all w-16 h-12 p-2 rounded-lg bg-[var(--primary-light)] group-hover:bg-yellow-200">
                 <app-lottie-animation animation="building"></app-lottie-animation>
               </div>
-              <div class="font-medium  tracking-wide text-xl flex items-center gap-2">
-                DEPARTMENT <span class="font-medium text-4xl">{{i+1}}</span>
+              <div class="flex items-center gap-2 text-xl font-medium tracking-wide">
+                DEPARTMENT <span class="text-4xl font-medium">{{i+1}}</span>
               </div>
             </div>
             <!-- Body  -->
-            <div class="flex-1 py-2 gap-1 w-full flex flex-col items-start ">
+            <div class="flex flex-col items-start flex-1 w-full gap-1 py-2 ">
               <div class="flex-1">
                 <span class="font-medium">Department Name: </span>
                 <span class="opacity-75">{{department.name}}</span>
               </div>
 
-              <div class="flex w-full  mt-2">
-                <div class="w-full flex justify-end">
+              <div class="flex w-full mt-2">
+                <div class="flex justify-end w-full">
                   <div class="flex gap-2">
-                    <button  (click)="selectDepartment(department);openDialog('delete')" class="rounded-lg px-2 flex items-center justify-center py-1 text-white bg-red-500 hover:bg-red-600 ">
+                    <button  (click)="selectDepartment(department);openDialog('delete')" class="flex items-center justify-center px-2 py-1 text-white bg-red-500 rounded-lg hover:bg-red-600 ">
                       <span  class="material-icons"> delete </span>
                     </button>
-                    <button  (click)="updateDepartment(department)" class="rounded-lg px-2 flex items-center justify-center py-1 text-white bg-green-500 hover:bg-green-600 ">
+                    <button  (click)="updateDepartment(department)" class="flex items-center justify-center px-2 py-1 text-white bg-green-500 rounded-lg hover:bg-green-600 ">
                       <span  class="material-icons"> edit </span>
                     </button>
                   </div>
@@ -52,9 +59,9 @@
               </div>
             </div>
           </button>
-          <button 
+          <button
           (click)="addDepartment()"
-          class="transition-all hover:scale-110 bg-white tracking-wider h-48 font-thin rounded-lg gap-3 shadow-md  hover:bg-green-950 hover:text-white cursor-pointer flex justify-center border-2 border-solid border-black/10 items-center  " 
+          class="flex items-center justify-center h-48 gap-3 font-thin tracking-wider transition-all bg-white border-2 border-solid rounded-lg shadow-md cursor-pointer hover:scale-110 hover:bg-green-950 hover:text-white border-black/10 "
           >
           <span class="text-4xl font-medium">
             +
@@ -76,11 +83,11 @@
       (onCancel)="closeDialog(false)"
       (onConfirm)="deleteDepartment(selectedDepartment!)"
   ></app-confirmation>
-  
+
   <app-create-department
     *ngIf="openDepartmentModal"
     [existingitem]="selectedDepartment"
     (onClose)="closeDialog($event)"
   >
-  
+
   </app-create-department>
